# ROS2_Humble

./: 4WD_Simulation.md  README.md  ROS1_VS_ROS2.md  Simulation_learnings.md  Week_4_documentation.md  frames_2025-06-18_15.12.17.gv  frames_2025-06-18_15.14.39.gv
install/: local_setup.sh  setup.sh
install/my_robot_controller/lib/my_robot_controller/: number_publisher  number_subscriber
install/my_robot_controller/share/my_robot_controller/: package.sh  package.xml
log/: latest_build  latest_list
src/4wd_robot_control/: package.xml  setup.cfg  setup.py
src/4wd_robot_control/4wd_robot_control/: stop_on_obstacle.py
src/4wd_robot_sim/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/4wd_robot_sim/launch/: bringup_launch.py  spawn_4wd_robot.launch.py  view_robot.launch.py
src/4wd_robot_sim/obstacle_stop/: obstacle_stop.py
src/4wd_robot_sim/rviz/: robot_viz.rviz
src/4wd_robot_sim/urdf/: 4wd_robot.xacro
src/4wd_robot_sim/wall_avoidance/: wall_avoidance.py
src/4wd_robot_sim/worlds/: custom_world.sdf
src/my_robot_controller/: package.xml  setup.py
src/my_robot_controller/launch/: start_all_nodes.py
src/my_robot_controller/my_robot_controller/: my_first_node.py  number_publisher.py  number_subscriber.py  pose_subscriber.py
