[develop]
script_dir=$base/lib/4wd_robot_sim
[install]
install_scripts=$base/lib/4wd_robot_sim

[options.entry_points]
console_scripts =
    # your node entrypoints if any (leave as is or empty)

[options.data_files]
share/ament_index/resource_index/packages = resource/4wd_robot_sim
share/4wd_robot_sim/launch = 
    launch/view_robot.launch.py
    launch/spawn_4wd_robot.launch.py
share/4wd_robot_sim/urdf = urdf/4wd_robot.xacro

